--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-    "version": 2,
-    "builds": [
+   
+    "rewrites": [
       {
-        "src": "./index.ejs",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
+        "source": "/(.*)",
+        "destination": "/"
       }
     ]
 }
