--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,19 @@
-{  
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "views/index.ejs",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/.*",
+      "dest": "index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
