--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "views/index.ejs",
+      "src": "./index.ejs",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/.*",
-      "dest": "index.js"
+      "dest": "index.ejs"
     },
     {
       "src": "/(.*)",
